--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,8 @@ footer {
 footer p {
     background-color: var(--background-color);
     margin: 0;
+    color: #4C5866;
+    font-size: 1.3rem;
 }
 
 a {
